--- a/SickLeaveEmailAutomation.WPF/View/MainWindow.xaml
+++ b/SickLeaveEmailAutomation.WPF/View/MainWindow.xaml
@@ -2,18 +2,66 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:SickLeaveEmailAutomation.WPF.ViewModel"
-        Title="Scanner App" Height="400" Width="525"
-        ResizeMode="CanMinimize">
+        xmlns:conv="clr-namespace:SickLeaveEmailAutomation.WPF.Converters"
+        Title="Sick Leave Emailing Handler"
+        Height="700"
+        Width="1250"
+        ResizeMode="CanMinimize"
+        Icon="pack://application:,,,/Resources/bigger_ico.png">
+    <Window.Resources>
+        <conv:StringNullOrEmptyToVisibilityConverter x:Key="StringNullOrEmptyToVisibilityConverter" />
+    </Window.Resources>
     <Window.DataContext>
         <local:ScanViewModel />
     </Window.DataContext>
-    <Grid>
-        <StackPanel Margin="10">
-            <Button Content="Scan" Command="{Binding ScanCommand}" Width="100" Margin="0 0 0 10"/>
-            <TextBox Text="{Binding ScanModel.ImagePath}" IsReadOnly="True" Width="400" Margin="0 0 0 10"/>
-            <Image Source="{Binding ScanModel.ImagePath}" Height="200" Width="200" Margin="0 0 0 10"/>
-            <ProgressBar Height="20" Width="400" Value="{Binding Progress}" Margin="0 0 0 10"/>
-            <TextBlock Text="{Binding ProgressMessage}" Margin="0 0 0 10" />
+    <Grid Background="DarkSlateGray">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="0">
+            <TextBlock Padding="250"
+                       Foreground="White"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Visibility="{Binding ScanModel.ImagePath, Converter={StaticResource StringNullOrEmptyToVisibilityConverter}}">
+                <Bold>No image scanned yet.</Bold>
+            </TextBlock>
+            <Image Source="{Binding ScanModel.ImagePath}"
+                   Height="600"
+                   Margin="10"
+                   Visibility="{Binding ScanModel.ImagePath, Converter={StaticResource StringNullOrEmptyToVisibilityConverter}, ConverterParameter=Inverse}">
+                <Image.InputBindings>
+                    <MouseBinding MouseAction="LeftDoubleClick"
+                                  Command="{Binding OpenImageCommand}" />
+                </Image.InputBindings>
+            </Image>
+            <TextBox Text="{Binding ScanModel.ImagePath}"
+                     IsReadOnly="True"
+                     Padding="5"
+                     Width="550"
+                     Visibility="{Binding ScanModel.ImagePath, Converter={StaticResource StringNullOrEmptyToVisibilityConverter}, ConverterParameter=Inverse}" />
+        </StackPanel>
+        <StackPanel Grid.Column="1">
+            <Button Command="{Binding ScanCommand}"
+                    Background="ForestGreen"
+                    Height="69"
+                    Width="420"
+                    Foreground="WhiteSmoke"
+                    Margin="0 200 0 50">
+                <Button.Content>
+                    <TextBlock FontSize="20"><Bold>Scan file</Bold></TextBlock>
+                </Button.Content>
+            </Button>
+            <ProgressBar Height="69"
+                         Width="420"
+                         Value="{Binding Progress}" />
+            <TextBlock FontSize="18"
+                       FontWeight="ExtraBlack"
+                       Foreground="GhostWhite"
+                       Padding="100 10 0 0 "
+                       TextWrapping="Wrap"
+                       Text="{Binding ProgressMessage}" />
         </StackPanel>
     </Grid>
 </Window>
