--- a/SickLeaveEmailAutomation.WPF/App.xaml
+++ b/SickLeaveEmailAutomation.WPF/App.xaml
@@ -1,9 +1,7 @@
 ﻿<Application x:Class="SickLeaveEmailAutomation.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SickLeaveEmailAutomation.WPF"
-             StartupUri="View/MainWindow.xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
