--- a/SickLeaveEmailAutomation.WPF/View/MainWindow.xaml
+++ b/SickLeaveEmailAutomation.WPF/View/MainWindow.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="SickLeaveEmailAutomation.WPF.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:SickLeaveEmailAutomation.WPF.ViewModel"
         xmlns:conv="clr-namespace:SickLeaveEmailAutomation.WPF.Converters"
         Title="Sick Leave Emailing Handler"
         Height="700"
@@ -10,10 +9,8 @@
         Icon="pack://application:,,,/Resources/bigger_ico.png">
     <Window.Resources>
         <conv:StringNullOrEmptyToVisibilityConverter x:Key="StringNullOrEmptyToVisibilityConverter" />
+        <conv:MultiBooleanConverter x:Key="MultiBooleanConverter" />
     </Window.Resources>
-    <Window.DataContext>
-        <local:ScanViewModel />
-    </Window.DataContext>
     <Grid Background="DarkSlateGray">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -48,7 +45,8 @@
                     Height="69"
                     Width="420"
                     Foreground="DarkSlateGray"
-                    Margin="0 150 0 50">
+                    Margin="0 150 0 50"
+                    IsEnabled="{Binding IsScanningButtonEnabled}">
                 <Button.Content>
                     <TextBlock FontSize="20"><Bold>Scan file</Bold></TextBlock>
                 </Button.Content>
@@ -75,8 +73,14 @@
                         Height="69"
                         Width="420"
                         Foreground="WhiteSmoke"
-                        Margin="0 10 0 0"
-                        IsEnabled="{Binding IsChecked, ElementName=chk_IsFileOkay}">
+                        Margin="0 10 0 0">
+                    <Button.IsEnabled>
+                        <MultiBinding Converter="{StaticResource MultiBooleanConverter}">
+                            <Binding Path="IsChecked"
+                                     ElementName="chk_IsFileOkay" />
+                            <Binding Path="IsEmailSendingButtonEnabled" />
+                        </MultiBinding>
+                    </Button.IsEnabled>
                     <Button.Content>
                         <TextBlock FontSize="20"><Bold>Send email</Bold></TextBlock>
                     </Button.Content>
